--- a/server/api/appsettings.json
+++ b/server/api/appsettings.json
@@ -1,9 +1,12 @@
 {
+  "AllowedHosts": "*",
+  "AppOptions": {
+    "DbConnectionString": "Host=ep-crimson-glitter-ag8y4q9t-pooler.c-2.eu-central-1.aws.neon.tech; Database=neondb; Username=neondb_owner; Password=npg_7nH1KWBLXkjc; SSL Mode=VerifyFull; Channel Binding=Require;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
