--- a/server/api/api.csproj
+++ b/server/api/api.csproj
@@ -2,7 +2,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
-    <ProjectReference Include="..\efscaffold\efscaffold.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NSwag.AspNetCore" Version="14.5.0" />
+    <PackageReference Include="NSwag.CodeGeneration.TypeScript" Version="14.5.0" />
+    <PackageReference Include="NSwag.Generation" Version="14.5.0" />
   </ItemGroup>
 
   <PropertyGroup>
